--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "prettier": "^3.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "sass": "^1.80.6"
+    "sass": "^1.80.6",
+    "sonner": "^1.7.0"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.59.7",
